<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_by"
        android:title="@string/sort"
        android:icon="@mipmap/ic_launcher_round"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_popular"
                    android:title="@string/popular" />
                <item
                    android:id="@+id/sort_rating"
                    android:title="@string/rating" />
                <item
                    android:id="@+id/sort_fav"
                    android:title="@string/favourites" />
            </group>
        </menu>
    </item>
</menu>